[metadata]
name = aros
version = 0.0.1
author = Hossein Mirzaei, Mackenzie Mathis
author_email = mackenzie@post.harvard.edu
description = AROS: Adversarially Robust Out-of-Distribution Detection through Stability
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
license_file_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/AROS
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/AROS/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    geotorch
    torchdiffeq
    git+https://github.com/RobustBench/robustbench.git

[options.extras_require]
dev =
    pylint
    toml
    yapf
    black
    pytest

[bdist_wheel]
universal=0