[metadata]
name = aros-node
version = 0.0.1
author = Hossein Mirzaei, Mackenzie Mathis
author_email = mackenzie@post.harvard.edu
description = AROS: Adversarially Robust Out-of-Distribution Detection through Stability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdaptiveMotorControlLab/AROS

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = file: requirements.txt

[options.extras_require]
dev =
    pylint
    toml
    yapf
    black
    pytest